--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                     <div class="collapse navbar-collapse" id="navbar">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item  mx-5">
-                                <a href="" class="nav-link active">Home</a>
+                                <a href="index.html" class="nav-link active">Home</a>
                             </li>
                             <li class="nav-item  mx-5">
-                                <a href="" class="nav-link">Courses</a>
+                                <a href="courses.html" class="nav-link">Courses</a>
                             </li>
                             <li class="nav-item  mx-5">
                                 <a href="" class="nav-link">About</a>
@@ -76,10 +76,10 @@
                     <div class="collapse navbar-collapse" id="navbar">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item  mx-5">
-                                <a href="" class="nav-link active">Home</a>
+                                <a href="index.html" class="nav-link active">Home</a>
                             </li>
                             <li class="nav-item  mx-5">
-                                <a href="" class="nav-link">Courses</a>
+                                <a href="courses.html" class="nav-link">Courses</a>
                             </li>
                             <li class="nav-item  mx-5">
                                 <a href="" class="nav-link">About</a>
@@ -171,7 +171,7 @@
                   <div class="swiper-slide"> 
 
                        <div class="col  p-2">
-                    <div class="boxes border shadow radius ">
+                         <div class="boxes border shadow radius ">
                         <div class="box p-3">
                             <img src="images/p-1.png" class="w-100" alt="">
                         </div>
